--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import './assets/variables.scss';
+@import './variables.scss';
 
 
 #root {
@@ -14,5 +14,5 @@
 .wrapper {
   max-width: 1260px;
   width: 100%;
-  padding: 15px;
+  padding: 0 15px;
 }
