--- a/src/components/style/Hero.scss
+++ b/src/components/style/Hero.scss
@@ -1,4 +1,4 @@
-@import '../../assets/variables.scss';
+@import '../../variables.scss';
 
 .hero-bg {
     width: 1260px;
@@ -25,12 +25,18 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
-        align-items: center;
+        align-items: start;
+        gap: 20px;
 
         h1 {
-            font-size: 80px;
+            font-size: 64px;
         }
+          .hero-btns{
+            display: flex;
+            gap: 10px;
+          }
     }
+  
 
     .right {
         position: relative;
