--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import './assets/variables.scss';
+@import './variables.scss';
 
 * {
   margin: 0;
@@ -19,9 +19,6 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  $bg-color: gunmetal;
-  $accent-color: salmon;
 }
 
 
@@ -30,6 +27,10 @@ a {
   font-weight: 500;
   color: $accent-color;
   text-decoration: inherit;
+  transition: all 0.3s;
+}
+img{
+   transition: all 0.3s;
 }
 
 a:hover {
@@ -42,24 +43,42 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 50px;
   line-height: 1.1;
+}
+h2{
+  text-transform: uppercase;
+  font-size: 30px;
+}
+h2:before{
+  content: "<";
+  left: 0;
+  color: $accent-color;
+}
+h2:after{
+  content: ">";
+  left: 0;
+  color: $accent-color;
+}
+h3{
+  text-transform: uppercase;
+  font-size: 24px;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 10px 20px;
+  font-size: 16px;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: all 0.3s;
 }
 
 button:hover {
-  border-color: #646cff;
+  border-color: $accent-color;
 }
 
 button:focus,
@@ -80,4 +99,9 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+.separator{
+  height: 7px;
+  background-color: $accent-color;
+  width:100%;
 }
