--- a/src/components/style/Portfolio.scss
+++ b/src/components/style/Portfolio.scss
@@ -6,18 +6,18 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  padding-top: 70px;
-  padding-bottom: 70px;
+  margin-top: 100px;
 
   .portfolio-items {
-    padding-top: 50px;
+
     display: flex;
     justify-content: space-between;
     gap: 20px;
     flex-wrap: nowrap;
     overflow-x: scroll;
     max-width: calc(100vw - 20px);
-    padding: 20px 0;
+    padding-top: 50px;
+    padding-bottom: 30px;
 
     .portfolio-item {
       background-color: black;
@@ -81,7 +81,8 @@
       }
     }
   }
-  .portfolio-cta{
+
+  .portfolio-cta {
     margin-top: 30px;
   }
 }
