--- a/src/components/style/About.scss
+++ b/src/components/style/About.scss
@@ -6,7 +6,8 @@
     &-content{
         width: 100%;;
         display: flex;
-                margin-top: 50px;
+        margin-top: 50px;
+        flex-wrap: wrap-reverse;
 
         &-description{
             width: 50%;
@@ -30,6 +31,17 @@
             
             }
 
+        }
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .about{
+        &-content-image{
+            width: 100%;
+        }
+        &-content-description{
+            width: 100%;
         }
     }
 }
