--- a/src/components/style/Header.scss
+++ b/src/components/style/Header.scss
@@ -33,11 +33,13 @@ header {
     justify-content: center;
     align-items: center;
     column-gap: 10px;
-    a{
-        opacity: 75%;
-        &:hover{
-            opacity: 100%;
-        }
+
+    a {
+      opacity: 75%;
+
+      &:hover {
+        opacity: 100%;
+      }
     }
   }
 
@@ -59,30 +61,37 @@ header {
     display: flex;
     gap: 15px;
     align-items: center;
+
     button {
       border: 1.5px solid $accent-color;
       outline: none;
 
     }
+
     button:hover {
       color: $accent-color;
-        outline: solid 1px $accent-color;
+      outline: solid 1px $accent-color;
     }
+
     .soc-icons {
-        display: flex;
-        gap:7px;
-        align-items: center;
-        justify-content: center;
-        a{
-            max-height: 25px;;
-        }
+      display: flex;
+      gap: 7px;
+      align-items: center;
+      justify-content: center;
+
+      a {
+        max-height: 25px;
+        ;
+      }
+
       img {
         max-height: 25px;
         opacity: 30%;
       }
+
       img:hover {
         opacity: 100%;
-      
+
       }
     }
   }
@@ -92,4 +101,60 @@ header {
     width: 100%;
     min-width: fit-content;
   }
+}
+
+  .mobile-header{
+    display: none;
+  }
+
+
+
+
+@media screen and (max-width: 750px){
+
+
+  .mobile-header {
+    position: fixed;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  padding-right:0;
+  align-items: center;
+  height: 50px;
+   z-index: 100;
+   background-color: #151a1d;
+ 
+
+  &-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    a {
+      span {
+        color: $white;
+      }
+
+      .logo-decor {
+        color: $accent-color;
+        font-weight: 700;
+      }
+
+    }
+
+  }
+
+  &-menu-toggle {
+    width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+}
+.desktop-header {
+  display: none;
+}
+
 }
