--- a/src/components/style/Hero.scss
+++ b/src/components/style/Hero.scss
@@ -1,23 +1,11 @@
 @import '../../variables.scss';
 
-.hero-bg {
-    width: 1260px;
-    position: absolute;
-    z-index: -1;
-    top: 84px;
-    left: 0;
-    overflow-y: hidden;
-    // max-height: 100vh;
-}
-
 .hero-container {
     position: relative;
     display: flex;
     justify-content: space-between;
     height: 100vh;
-    backdrop-filter: blur(10px);
-    // background-color: rgba(0, 0, 0, 0.249);
-
+    max-height: 500px;
 
 
     .left {
@@ -30,13 +18,33 @@
 
         h1 {
             font-size: 64px;
+            text-align: left;
         }
-          .hero-btns{
+
+        p {
+            text-align: left;
+        }
+
+        .hero-btns {
             display: flex;
             gap: 10px;
-          }
+            flex-wrap: wrap;
+
+            button {
+                outline: 1px solid $accent-color;
+
+                &:hover {
+                    color: $accent-color;
+                }
+            }
+
+            .highlighted {
+                outline: 1px solid $accent-color;
+                background-color: #fa807220;
+            }
+        }
     }
-  
+
 
     .right {
         position: relative;
@@ -47,11 +55,40 @@
 
         .hero-portrait {
             height: 100%;
-            // position: absolute;
-            // z-index: 2;
-            // right: 0;
-            // top: 0;
+            max-height: 500px;
         }
     }
+}
 
+@media screen and (max-width: 750px) {
+    .hero-container {
+        height: 90vh;
+        max-height: 650px;
+        max-width: 100vw;
+        overflow: clip;
+        padding: 30px;
+
+        .left {
+            width: 70%;
+            gap: 35px;
+            line-height: 30px;
+
+            h1 {
+                font-size: 36px;
+            }
+        }
+
+        .right {
+            position: absolute;
+            left: 35%;
+            bottom: 0;
+            z-index: -1;
+
+            .hero-portrait {
+                height: 60%;
+                max-height: 400px;
+            }
+        }
+
+    }
 }
