--- a/src/components/style/Portfolio.scss
+++ b/src/components/style/Portfolio.scss
@@ -2,7 +2,6 @@
 
 .portfolio {
   width: 100%;
-
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -24,7 +23,7 @@
     padding-bottom: 30px;
     padding-left: 30px;
     padding-right: 30px;
-    
+
 
     .portfolio-item {
       background-color: black;
@@ -91,5 +90,21 @@
 
   .portfolio-cta {
     margin-top: 30px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .portfolio {
+    width: 100%;
+
+      .portfolio-items {
+        padding-left: 0px;
+        padding-right: 0px;
+        .portfolio-item{
+          min-width: 280px;
+        }
+      }
+    
+
   }
 }
