--- a/src/components/style/Pricing.scss
+++ b/src/components/style/Pricing.scss
@@ -12,6 +12,7 @@
         margin-bottom: 50px;
         flex-wrap: wrap;
         width: 100%;
+        gap: 30px;
 
         .pricing-card-1,
         .pricing-card-2,
@@ -70,12 +71,31 @@
 
     &-addons {
         display: flex;
-        gap: 20px;
+        gap: 30px;
         justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        hr{
+            height: 50px;
+        }
 
         p {
             color: $accent-color;
             font-weight: 500;
+        }
+        li{
+            text-align: left;
+        }
+
+    }
+}
+
+@media screen and (max-width: 750px){
+    .pricing{
+        &-addons{
+            hr{
+                display: none;
+            }
         }
     }
 }
