--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,9 @@ a:hover {
 body {
   margin: 0;
   min-height: 100vh;
+  scroll-behavior: smooth;
+  position: relative;
+  height: 100%;
 }
 
 h1 {
