--- a/src/components/style/SlideUp.scss
+++ b/src/components/style/SlideUp.scss
@@ -11,6 +11,7 @@
     background-color: $accent2;
     border-radius: 50%;
     z-index: 5;
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     transition: all 0.3s ease;
             &:hover{
