--- a/src/components/style/About.scss
+++ b/src/components/style/About.scss
@@ -27,7 +27,8 @@
             justify-content: center;
             align-items: center;
             img{
-                width: 300px;
+                width: 100%;
+                max-width: 300px;
             
             }
 
