--- a/src/components/style/Contacts.scss
+++ b/src/components/style/Contacts.scss
@@ -16,6 +16,7 @@
     p {
         padding: 0 30px;
         width: 100%;
+        text-align: center;
 
     }
 
@@ -34,7 +35,7 @@
             margin: 10px 0;
             padding: 5px;
             font-family: Arial, Helvetica, sans-serif;
-            width: 30%;
+            width: 50%;
         }
 
         textarea {
@@ -43,26 +44,41 @@
             margin: 20px 0;
             padding: 5px;
             font-family: Arial, Helvetica, sans-serif;
-            width: 30%;
+            width: 50%;
             min-height: 70px;
         }
 
         button {
-            width: 30%;
+            width: 50%;
         }
     }
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 800px) {
 
     .contacts {
-        p {
-            padding: 0;
-            text-align: left;
-            margin-top: 10px;
-        }
-
+        padding: 30px;
         form {
+            input {
+                width: 70%;
+            }
+
+            textarea {
+                width: 70%;
+            }
+
+            button {
+                width: 70%;
+            }
+        }
+    }
+}
+@media screen and (max-width: 450px) {
+
+    .contacts {
+        padding: 30px;
+        form {
+            padding: 20px;
             input {
                 width: 100%;
             }
