--- a/src/components/style/Hero.scss
+++ b/src/components/style/Hero.scss
@@ -7,6 +7,7 @@
     height: 100vh;
     max-height: 500px;
     min-height: 300px;
+       min-height:500px;
 
 
     .left {
@@ -18,7 +19,7 @@
         gap: 20px;
 
         h1 {
-            font-size: 64px;
+            font-size: 80px;
             text-align: left;
         }
 
@@ -61,7 +62,7 @@
     }
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 850px) {
     .hero-container {
         height: 90vh;
         max-height: 650px;
@@ -70,24 +71,52 @@
         padding: 30px;
 
         .left {
-            width: 70%;
-            gap: 35px;
+            width: 65%;
+            gap: 25px;
             line-height: 30px;
+            padding-right: 5%;
 
             h1 {
-                font-size: 36px;
+                font-size: 64px;
             }
         }
 
         .right {
             position: absolute;
-            left: 35%;
+            right: -15%;
             bottom: 0;
             z-index: -1;
+            overflow: hidden;
 
             .hero-portrait {
                 height: 60%;
                 max-height: 400px;
+            }
+        }
+
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .hero-container {
+        .left {
+            width: 70%;
+            gap: 20px;
+            h1 {
+                font-size: 44px;
+            }
+        }
+
+        .right {
+
+            right: -20%;
+            bottom: 0;
+            z-index: -1;
+            overflow: hidden;
+
+            .hero-portrait {
+                height: 60%;
+                max-height: 350px;
             }
         }
 
