--- a/src/components/style/Pricing.scss
+++ b/src/components/style/Pricing.scss
@@ -8,7 +8,7 @@
         margin-top: 50px;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: center;
         margin-bottom: 50px;
         flex-wrap: wrap;
         width: 100%;
@@ -18,7 +18,8 @@
         .pricing-card-2,
         .pricing-card-3 {
             background-color: #ffffff20;
-            width: 375px;
+            width: 100%;
+            max-width: 350px;
             padding: 30px;
             border-radius: 7px;
             transition: all 0.3s ease;
@@ -55,10 +56,6 @@
         }
 
         .pricing-card-2 {
-            height: 400px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
             border: 2px solid $accent-color;
             box-shadow: #d24e3f20 0px 6px 24px 0px;
             padding: 30px;
@@ -89,6 +86,12 @@
 
     }
 }
+@media screen and (max-width: 1300px){
+    .pricing-cards{
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+}
 
 @media screen and (max-width: 750px){
     .pricing{
@@ -99,3 +102,4 @@
         }
     }
 }
+
