--- a/src/components/style/SlideUp.scss
+++ b/src/components/style/SlideUp.scss
@@ -23,3 +23,17 @@
         
     }
 }
+
+@media screen and (max-width: 850px) {
+    .slide-up{
+    bottom: 10px;
+    right: 10px;
+        height: 60px;
+    width: 60px;
+        img{
+        width: 60px;
+
+        
+    }
+    }
+}
