--- a/src/index.scss
+++ b/src/index.scss
@@ -52,7 +52,7 @@
 
   h2 {
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 32px;
   }
 
   h2:before {
@@ -69,7 +69,7 @@
 
   h3 {
     text-transform: uppercase;
-    font-size: 24px;
+    font-size: 20px;
   }
 
   button {
@@ -125,3 +125,12 @@
     width: 100%;
   }
 // }
+
+@media screen and (max-width: 850px){
+    h2 {
+    font-size: 28px;
+  }
+    h3 {
+    font-size: 18px;
+  }
+}
